# substrate_study

./: .gitignore  LICENSE  test
bubble_sort/: .gitignore
bubble_sort/src/: main.rs
day_6/course/: meta.json
day_6/substrate-node-template/pallets/poe/: Cargo.toml
day_6/substrate-node-template/pallets/poe/src/: lib.rs
day_6/substrate-node-template/runtime/src/: lib.rs
substrate-12/day_4/src/: main.rs
substrate-12/day_6/course/: main.ts  package.json
substrate-12/day_6/substrate-node-template/runtime/: Cargo.toml
substrate-7/lesson_1/: README.md
substrate-7/lesson_1/substrate-node-template/: Cargo.toml
substrate-7/lesson_1/substrate-node-template/runtime/: Cargo.toml
substrate-7/lesson_1/substrate-node-template/runtime/src/: lib.rs
substrate-7/lesson_2/: README.md
substrate-7/lesson_2/substrate-node-template/git/: config  packed-refs
substrate-7/lesson_2/substrate-node-template/git/logs/: HEAD
substrate-7/lesson_2/substrate-node-template/runtime/: Cargo.toml
substrate-7/lesson_2/substrate-node-template/runtime/src/: lib.rs
substrate-7/lesson_3/: README.md
substrate-7/lesson_3/substrate-node-template/: Cargo.toml
substrate-7/lesson_3/substrate-node-template/git/: FETCH_HEAD  index  shallow
substrate-7/lesson_3/substrate-node-template/pallets/kitties/: Cargo.toml
substrate-7/lesson_3/substrate-node-template/pallets/poe/: Cargo.toml
substrate-7/lesson_3/substrate-node-template/runtime/src/: lib.rs
substrate-7/lesson_3_polkadot-v1.0.0/: README.md
substrate-7/lesson_3_polkadot-v1.0.0/substrate-node-template/.git__/: packed-refs
substrate-7/lesson_4_polkadot-v1.0.0/: README.md
substrate-7/lesson_4_polkadot-v1.0.0/substrate-node-template/.git__/: FETCH_HEAD  config  index
substrate-7/lesson_4_polkadot-v1.0.0/substrate-node-template/node/: Cargo.toml
substrate-7/lesson_4_polkadot-v1.0.0/substrate-node-template/runtime/: Cargo.toml
substrate-7/lesson_5/: README.md
substrate-7/lesson_5/ink-playground/erc20/: lib.rs
substrate-7/lesson_5/substrate-node-template/: Cargo.toml
substrate-7/lesson_5/substrate-node-template/pallets/kitties/: Cargo.toml
substrate-7/lesson_5/substrate-node-template/pallets/offchain/: Cargo.toml
substrate-7/lesson_6/: README.md
substrate-7/lesson_6/play-substrate/.--git/: config  index  packed-refs
substrate-7/lesson_6/substrate-stencil/: stencil-staging-raw.json  stencil-staging.json
(+23 files in other folders)
